<resources>
    <string name="app_name">My App Portfolio</string>
    <string name="intro">My Nanondegree Apps!</string>
    <string name="spotify">Spotify Streamer</string>
    <string name="scores">Scores App</string>
    <string name="library">Library App</string>
    <string name="build">Build It Bigger</string>
    <string name="xyz">XYZ Reader</string>
    <string name="capstone">Capstone</string>
</resources>
